<resources>
    <string name="app_name">hhle-FuelTrack</string>
    <string name="main_title">Log Entries</string>
    <string name="btn_fuel_cost">Total Fuel Cost</string>
    <string name="btn_add_entry">Add New Entry</string>
    <string name="title_activity_add_entry">AddEntryActivity</string>
    <string name="add_date">Date (yyyy-mm-dd)</string>
    <string name="add_station">Station Name</string>
    <string name="add_odometer">Odometer Reading</string>
    <string name="add_grade">Fuel Grade</string>
    <string name="add_fuel_amount">Fuel Amount</string>
    <string name="add_fuel_unit_cost">Fuel Unit Cost</string>
    <string name="calc_total_cost">Fuel Total Cost</string>
    <string name="saveEntry">Save New Entry</string>
    <string name="cancelEntry">Cancel New Entry</string>

</resources>
