<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hhle.hhle_fueltrack.AddEntryActivity">

    <EditText
        android:id="@+id/add_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_date"/>

    <EditText
        android:id="@+id/add_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_station"/>

    <EditText
        android:id="@+id/add_odometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_odometer"/>

    <EditText
        android:id="@+id/add_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_grade"/>

    <EditText
        android:id="@+id/add_fuel_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_fuel_amount"/>

    <EditText
        android:id="@+id/add_unit_fuel_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_fuel_unit_cost"/>

    <Button
        android:id="@+id/saveEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveEntry"
        android:onClick="saveEntry"/>

    <Button
        android:id="@+id/cancelEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelEntry"
        android:onClick="cancelEntry"/>

</LinearLayout>
